# rosetta-uuid

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: diesel_impls.rs  lib.rs  redis.rs
src/diesel_impls/: postgres.rs  sqlite.rs
tests/: wasm.rs
